--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,11 @@
 {
-    "version": 2,
     "builds": [
       {
         "src": "app/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+        "use": "@vercel/python"
       },
       {
-        "src": "build_files.sh",
+        "src": "build.sh",
         "use": "@vercel/static-build",
         "config": {
           "distDir": "staticfiles"
