--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,11 @@
     "builds": [
       {
         "src": "app/wsgi.py",
-        "use": "@vercel/python"
+        "use": "@vercel/python",
+        "config": {"maxLambdaSize": "15mb", "runtime": "python3.9"}
       }
     ],
     "routes": [
-      {
-        "src": "/static/(.*)",
-        "dest": "/static/$1"
-      },
       {
         "src": "/(.*)",
         "dest": "app/wsgi.py"
